--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,17 +17,31 @@
         color: white;
         padding: 18px 35px;
         border-radius: 5px;
-        border: none;
+        border: none;}
 
+        .section-titel {
+            font-size: 35px;
+            font-weight: bold;
+            color: #181818;
+        }
+        .section-description{
+            font-size: 18px;
+            color: #757575;
 
-    }
+        }
+        .secondary-bg {
+            background-color: #FFF8F3;
+        }
     /* header */
     .header{
         background-image: url('../images/developer.png'), url('../images/header_bg.png');
         background-repeat:no-repeat;
         background-position: top left,bottom right;
-        margin: 10px 10px;
-        padding: 5px 2px;
+    
+       
+      
+      
+        
 
     }
 
@@ -81,4 +95,33 @@ nav li a{
 }
 .banner-content{
     max-width: 580px;
+}
+/* about style */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin: top 130px;;
+    
+}
+/* main style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.item-description{
+    font-weight: 600px;
+
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-title{
+    margin:none;
+}
+.item-description{
+    text-align:top ;
+
+
 }
