--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -32,6 +32,9 @@
         .secondary-bg {
             background-color: #FFF8F3;
         }
+        .text-center{
+            text-align: center;
+        }
     /* header */
     .header{
         background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -101,13 +104,19 @@ nav li a{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin: top 130px;;
+    
     
 }
 /* main style */
 main{
     max-width: 1140px;
     margin: 0 auto;
+
+}
+main section{
+    margin-top:130px;
+    margin-bottom: 130px;
+
 }
 .item-description{
     font-weight: 600px;
@@ -125,3 +134,16 @@ main{
 
 
 }
+/* skills section */
+.skills-container{
+    display: flex;
+    gap:24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgb(0,0,0,0.06);
+    margin-bottom: 50px;
+}
+
+  
