--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,10 @@
         padding: 18px 35px;
         border-radius: 5px;
         border: none;}
+        .btn:hover {opacity: .8}
+    
+
+    
 
         .section-titel {
             font-size: 35px;
@@ -175,8 +179,39 @@ margin: 30px 5px;
     font-weight:600px;
 }
 .section-title{
-    text-align: center;
+text-align: center;
     font-size: 35px;
     font-weight:600px;
     margin-bottom: 128PX;
+}
+/* footer styles */
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap:100px;
+
+}
+.footer-column{
+    width:50%;
+
+}
+footer input[type="text"],footer input[type="email"], footer textarea {
+    height: 64px;
+    border-radius: 5px;
+    background-color: rgb(255, 251, 251);
+    display: block;
+    width: 100%;
+    padding: 10px 20px ;
+    margin-bottom: 24px;
+
+}
+.section-title{
+    margin-top: 30px;
+
+}
+.section-title{
+    margin-bottom: 50px;
+}
+.icons{
+    margin-top: 50px;
 }
