--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -215,3 +215,33 @@ footer input[type="text"],footer input[type="email"], footer textarea {
 .icons{
     margin-top: 50px;
 }
+/* responsive Media Query */
+.hide{
+    display:none;
+
+}
+@media screen and (max-width:576px){
+    .skills-container, 
+    footer ,
+     .about-items{
+     flex-direction:column;
+    }
+ .resume-container{
+    flex-direction:column;
+    padding: 5px;
+    margin: 5px;
+    justify-content: center;
+ }
+ footer{
+    padding:10px;
+ }
+ .footer-column{
+    width: 100%;
+ }
+ footer input[type="text"],footer input[type="email"], footer textarea {
+    width: calc(100% - 40px);
+ }
+ .about{
+    padding: 10px;
+ }
+ }
