--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -223,8 +223,17 @@ footer input[type="text"],footer input[type="email"], footer textarea {
 @media screen and (max-width:576px){
     .skills-container, 
     footer ,
-     .about-items{
+    .about-items,
+    .banner,
+    nav,
+    nav > ul{
      flex-direction:column;
+    }
+    nav > ul{
+        gap:15px;
+    }
+    .btn-primary{
+        margin-bottom: 20px;
     }
  .resume-container{
     flex-direction:column;
@@ -243,5 +252,11 @@ footer input[type="text"],footer input[type="email"], footer textarea {
  }
  .about{
     padding: 10px;
+ }
+ .banner{
+    margin: 20px;
+ }
+ .banner-profile-pic{
+    width: 100%;
  }
  }
